Fix low contrast on form inputs

--- a/styles.css
+++ b/styles.css
@@ -199,10 +199,14 @@ main > form > .form-row > .input-and-label {
     flex-direction: column;
 }
 
-input:focus {
+input {
     transition: 200ms;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-    border: 0.1px solid blue;
+}
+
+input:focus {
+    transition: 200ms;
+    border: 1px solid blue;
 }
 
 input:invalid {
